# arxiv_monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: arxiv-daily.json
src/arxiv_monitor/: __main__.py  arxiv_monitor.py
