[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-monitor"
version = "0.1.0"
description = "Personalized Monitor for Arxiv Papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
arxiv_monitor = "arxiv_monitor.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
